--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1, maximum-scale=1" />
+	<meta name="description" content="My Portfolio" />
+	<meta name="title" property="og:title" content="Portfolio" />
+	<meta property="og:type" content="Website" />
+	<meta name="image" property="og:image" content="https://github.com/a-manic/Portfolio-Aishwarya/blob/main/assets/images/profile.jpg" />
+	<meta name="description" property="og:description" content="My Portfolio" />
+	<meta name="author" content="Aishwarya Manickam Rameshbabu" />
 	<title>Portfolio Aishwarya Manickam Rameshbabu</title>
 	<script src="bower_components/jquery/dist/jquery.min.js" charset="utf-8"></script>
 	<link rel="stylesheet" href="bower_components/foundation-sites/dist/css/foundation.min.css">
