--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta name="description" content="My Portfolio" />
 	<meta name="title" property="og:title" content="Portfolio" />
 	<meta property="og:type" content="Website" />
-	<meta name="image" property="og:image" content="https://github.com/a-manic/Portfolio-Aishwarya/blob/main/assets/images/profile.jpg" />
+	<meta name="image" property="og:image" content="https://live.staticflickr.com/65535/51412883507_e03a525cfb.jpg" />
 	<meta name="description" property="og:description" content="My Portfolio" />
 	<meta name="author" content="Aishwarya Manickam Rameshbabu" />
 	<title>Portfolio Aishwarya Manickam Rameshbabu</title>
