changed linkedin url

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 				<div class="small-12 column">
 					<div class="my-arrow-div text-center">
 						<a href="https://github.com/a-manic" target="_blank"><i class="fab fa-github-square fa"></i></a>	
-						<a href="https://linkedin.com/in/aishwarya-manickam-rameshbabu" target="_blank"><i class="fab fa-linkedin fa"></i></a>	
+						<a href="https://linkedin.com/in/a-manic" target="_blank"><i class="fab fa-linkedin fa"></i></a>	
 					</div>
 				</div>
 			</div>
@@ -243,7 +243,7 @@
 						<div class="my-arrow-div text-center">
 							<a onClick="javascript:window.open('mailto:aishukavibabu@gmail.com', 'mail');event.preventDefault()" href="mailto:aishukavibabu@gmail.com"><i class="fi-mail fa"></i></a>
 							<a href="https://github.com/a-manic" target="_blank"><i class="fab fa-github-square fa"></i></a>	
-							<a href="https://linkedin.com/in/aishwarya-manickam-rameshbabu" target="_blank"><i class="fab fa-linkedin fa"></i></a>	
+							<a href="https://linkedin.com/in/a-manic" target="_blank"><i class="fab fa-linkedin fa"></i></a>	
 						</div>
 					</div>
 					<p id="copyright">Copyright &copy; 2021 | Aishwarya Manickam Rameshbabu</p>
